# DesignPatterns

./: .gitignore  CMakeLists.txt
ducks/: CMakeLists.txt
ducks/src/: main.cpp
include/: Duck.h
include/Ducks/: Duck.h  MallardDuck.h  RedHeadDuck.h
include/FlyBehavior/: FlyBehavior.h  FlyNoWay.h  FlyWithWings.h
include/QuackBehavior/: MuteQuack.h  Quack.h  QuackBehavior.h  Squeak.h
src/: Duck.cpp  RedHeadDuck.cpp  main.cpp
src/Ducks/: Duck.cpp  MallardDuck.cpp  RedHeadDuck.cpp
src/FlyBehavior/: FlyBehavior.cpp  FlyNoWay.cpp  FlyWithWings.cpp
src/QuackBehavior/: MuteQuack.cpp  QuackBehavior.cpp
starbuzz/: CMakeLists.txt
starbuzz/include/: Beverage.h  CondimentDecorator.h
starbuzz/include/beverages/: Espresso.h
starbuzz/src/: Beverage.cpp  main.cpp
starbuzz/src/beverages/: Espresso.cpp
weatherStation/: CMakeLists.txt  file.cap  main.cpp
weatherStation/atmel-build/: CMakeLists.txt  runUnitTest.sh
weatherStation/atmel-build/lcovDir/: coverage.info  coverage.info.filtered  coverage.xml
weatherStation/atmel-build/lcovDir/lcovHtml/: index-sort-f.html  index-sort-l.html  index.html
weatherStation/atmel-build/lcovDir/lcovHtml/include/: DisplayElement.h.func-sort-c.html  DisplayElement.h.func.html  DisplayElement.h.gcov.html  WeatherData.h.func-sort-c.html  WeatherData.h.func.html  WeatherData.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
weatherStation/atmel-build/lcovDir/lcovHtml/src/: CurrentConditionsDisplay.cpp.func-sort-c.html  CurrentConditionsDisplay.cpp.func.html  CurrentConditionsDisplay.cpp.gcov.html  DisplayElement.cpp.func-sort-c.html  DisplayElement.cpp.func.html  DisplayElement.cpp.gcov.html  ForcastDisplay.cpp.func-sort-c.html  ForcastDisplay.cpp.func.html  ForcastDisplay.cpp.gcov.html  HeatIndexDisplay.cpp.func-sort-c.html  HeatIndexDisplay.cpp.func.html  HeatIndexDisplay.cpp.gcov.html  Observer.cpp.func-sort-c.html  Observer.cpp.func.html  Observer.cpp.gcov.html  StatisticsDisplay.cpp.func-sort-c.html  StatisticsDisplay.cpp.func.html  StatisticsDisplay.cpp.gcov.html  Subject.cpp.func-sort-c.html  Subject.cpp.func.html  Subject.cpp.gcov.html  WeatherData.cpp.func-sort-c.html  WeatherData.cpp.func.html  WeatherData.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
weatherStation/atmel-build/lcovTempWork/: updateScript.sh
weatherStation/catch-tests/: CMakeLists.txt  forcastDisplayUnitTest.cpp  mainUnitTest.cpp  statisticsDisplayUnitTest.cpp
weatherStation/catch-tests-coverage/: CMakeLists.txt
weatherStation/google-tests/: CMakeLists.txt  forcastDisplayUnitTest.cpp  statisticsDisplayUnitTest.cpp
weatherStation/google-tests-coverage/: CMakeLists.txt
weatherStation/include/: CurrentConditionsDisplay.h  DisplayElement.h  ForcastDisplay.h  HeatIndexDisplay.h  Observer.h  StatisticsDisplay.h  Subject.h  WeatherData.h
weatherStation/src/: CurrentConditionsDisplay.cpp  DisplayElement.cpp  ForcastDisplay.cpp  HeatIndexDisplay.cpp  Observer.cpp  StatisticsDisplay.cpp  Subject.cpp  WeatherData.cpp  main.cpp
weatherStation/tests/: CMakeLists.txt  forcastDisplayUnitTest.cpp  mainUnitTest.cpp  unitTestForcastDisplay.cpp
